<resources>
    <string name="app_name">Story App</string>
    <string name="title_signup_page">Let\'s Register Yourself!</string>
    <string name="signup_password_requirements">Password cannot be less than 8 characters</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up">Sign up</string>
    <string name="login">Login</string>
    <string name="login_suggestion">Already signed up?</string>
    <string name="signup_suggestion">Not registered yet?</string>
    <string name="invalid_email">Invalid Email</string>
    <string name="name_cannot_empty">Name cannot be empty</string>
    <string name="email_cannot_empty">Email cannot be empty</string>
    <string name="password_cannot_empty">Password cannot be empty</string>
    <string name="confirm_password_cannot_empty">Confirm Password cannot be empty</string>
    <string name="confirm_password_not_equals_password">Confirm password is not the same as the password</string>
    <string name="login_description">Welcome to Story App, Let\'s log in</string>
    <string name="success">Success</string>
    <string name="message_signup_success">Account created successfully\nLet\'s Log in</string>
    <string name="logout">Logout</string>
    <string name="logout_uppercase">LOGOUT</string>
    <string name="verify_logout_message">are you sure to log out of the app?</string>
    <string name="yes">yes</string>
    <string name="no">no</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="upload">Upload</string>
    <string name="description_fab">Add new story</string>
    <string name="preview_image">preview image</string>
    <string name="add_description">Add Description</string>
    <string name="no_internet_message">No Internet Connection, please try again</string>
    <string name="something_failed_message">Something wrong, please try again later</string>
    <string name="description_required">Description cannot be empty</string>
    <string name="image_required">Image cannot be empty</string>
    <string name="invalid_input_data">Data Invalid, Please Check Again</string>
    <string name="detail_description_example">You’ll never know how incredible you’ll become if you choose to stay and don’t face any difficulties you encounter</string>
    <string name="dicoding">Dicoding</string>
    <string name="image_detail_description">Story Image</string>
    <string name="dicoding_story_title">Dicoding Story</string>
    <string name="image_success_description">image success</string>
    <string name="image_story_item_description">image story item</string>
    <string name="language">Language</string>
    <string name="detail_story_title">Story Details</string>
    <string name="invalid_password">Invalid password</string>
    <string name="user_not_found">User not found</string>
    <string name="create_story_title">New Story</string>
    <string name="title_activity_maps">MapsActivity</string>
</resources>