<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.DetailStoryActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/topAppBar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            app:title="@string/detail_story_title"
            app:navigationIcon="@drawable/ic_back_24"
            style="@style/Theme.StoryApp.ToolBar" />
    </com.google.android.material.appbar.AppBarLayout>

    <ImageView
        android:contentDescription="@string/image_detail_description"
        android:id="@+id/iv_detail_photo"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        app:layout_constraintTop_toBottomOf="@id/appBarLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/tv_detail_name"
        tools:srcCompat="@drawable/image_story_example"
        android:scaleType="fitXY"
        android:transitionName="image_story" />

    <TextView
        android:id="@+id/tv_detail_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="@string/dicoding"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_detail_photo"
        app:layout_constraintBottom_toTopOf="@id/tv_detail_description"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:transitionName="name" />

    <TextView
        android:id="@+id/tv_detail_description"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="@id/tv_detail_name"
        app:layout_constraintTop_toBottomOf="@id/tv_detail_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="32dp"
        tools:text="@string/detail_description_example"
        android:textSize="16sp"
        android:transitionName="description" />

</androidx.constraintlayout.widget.ConstraintLayout>