<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.RegisterActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/image_view_register"
            android:layout_width="150dp"
            android:layout_height="150dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/text_view"
            android:layout_marginTop="55dp"
            app:srcCompat="@drawable/ic_user" />

        <TextView
            android:id="@+id/text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_signup_page"
            android:layout_marginTop="32dp"
            app:layout_constraintBottom_toTopOf="@id/nameEditTextLayout"
            app:layout_constraintTop_toBottomOf="@id/image_view_register"
            app:layout_constraintStart_toStartOf="@id/nameEditTextLayout"
            android:alpha="0"
            tools:alpha="100" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/nameEditTextLayout"
            android:layout_width="0dp"
            android:hint="@string/name"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/text_view"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="8dp"
            app:startIconDrawable="@drawable/ic_person_24"
            android:alpha="0"
            tools:alpha="100">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ed_register_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/emailEditTextLayout"
            android:layout_width="0dp"
            android:hint="@string/email"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/nameEditTextLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="8dp"
            app:startIconDrawable="@drawable/ic_email_24"
            android:alpha="0"
            tools:alpha="100">

            <com.hadroy.storyapp.view.custom.EmailEditText
                android:id="@+id/ed_register_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textEmailAddress" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwordEditTextLayout"
            android:layout_width="0dp"
            android:hint="@string/password"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/emailEditTextLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="8dp"
            app:startIconDrawable="@drawable/ic_lock_24"
            app:passwordToggleEnabled="true"
            android:alpha="0"
            tools:alpha="100">

            <com.hadroy.storyapp.view.custom.PasswordEditText
                android:id="@+id/ed_register_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/confirmPasswordEditTextLayout"
            android:layout_width="0dp"
            android:hint="@string/confirm_password"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/passwordEditTextLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="8dp"
            app:startIconDrawable="@drawable/ic_lock_24"
            app:passwordToggleEnabled="true"
            android:alpha="0"
            tools:alpha="100">

            <com.hadroy.storyapp.view.custom.PasswordEditText
                android:id="@+id/ed_register_confirm_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btn_signup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/confirmPasswordEditTextLayout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="32dp"
            android:textSize="16sp"
            android:text="@string/sign_up"
            android:textColor="@color/white"
            android:backgroundTint="@color/blue"
            android:alpha="0"
            tools:alpha="100" />

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/grey"
            android:layout_marginHorizontal="46dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_signup"
            app:layout_constraintBottom_toTopOf="@id/text_view_login_suggestion"
            android:alpha="0"
            tools:alpha="100" />

        <TextView
            android:id="@+id/text_view_login_suggestion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/btn_signup"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/btn_login"
            android:text="@string/login_suggestion"
            android:textStyle="bold"
            android:layout_marginTop="24dp"
            android:alpha="0"
            tools:alpha="100" />

        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/text_view_login_suggestion"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="32dp"
            android:textSize="16sp"
            android:text="@string/login"
            android:textColor="@color/white"
            android:backgroundTint="@color/blue"
            android:alpha="0"
            tools:alpha="100" />

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="100dp"
            android:layout_height="100dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:visibility="gone" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>