<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.LoginActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/image_view"
            android:layout_width="150dp"
            android:layout_height="150dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="75dp"
            app:srcCompat="@drawable/ic_story_book" />

        <TextView
            android:id="@+id/text_view_login_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/image_view"
            android:layout_marginTop="32dp"
            android:layout_marginStart="24dp"
            android:text="@string/login"
            android:textStyle="bold"
            android:textSize="20sp"
            android:alpha="0"
            tools:alpha="100" />

        <TextView
            android:id="@+id/text_view_login_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/text_view_login_title"
            app:layout_constraintTop_toBottomOf="@id/text_view_login_title"
            android:layout_marginTop="8dp"
            android:text="@string/login_description"
            android:textSize="14sp"
            android:alpha="0"
            tools:alpha="100" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/emailEditTextLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_view_login_description"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="12dp"
            android:hint="@string/email"
            app:startIconDrawable="@drawable/ic_email_24"
            android:alpha="0"
            tools:alpha="100">

            <com.hadroy.storyapp.view.custom.EmailEditText
                android:id="@+id/ed_login_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwordEditTextLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/emailEditTextLayout"
            app:layout_constraintEnd_toEndOf="@id/emailEditTextLayout"
            app:layout_constraintTop_toBottomOf="@id/emailEditTextLayout"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="32dp"
            android:hint="@string/password"
            app:startIconDrawable="@drawable/ic_lock_24"
            app:passwordToggleEnabled="true"
            android:alpha="0"
            tools:alpha="100">

            <com.hadroy.storyapp.view.custom.PasswordEditText
                android:id="@+id/ed_login_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/passwordEditTextLayout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="32dp"
            android:textSize="16sp"
            android:text="@string/login"
            android:textColor="@color/white"
            android:backgroundTint="@color/blue"
            android:alpha="0"
            tools:alpha="100" />

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/grey"
            android:layout_marginHorizontal="46dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_login"
            app:layout_constraintBottom_toTopOf="@id/text_view_signup_suggestion"
            android:alpha="0"
            tools:alpha="100" />

        <TextView
            android:id="@+id/text_view_signup_suggestion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/btn_login"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/btn_signup"
            android:text="@string/signup_suggestion"
            android:textStyle="bold"
            android:layout_marginTop="24dp"
            android:alpha="0"
            tools:alpha="100" />

        <Button
            android:id="@+id/btn_signup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/text_view_signup_suggestion"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="32dp"
            android:textSize="16sp"
            android:text="@string/sign_up"
            android:textColor="@color/white"
            android:backgroundTint="@color/blue"
            android:alpha="0"
            tools:alpha="100" />

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="100dp"
            android:layout_height="100dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:visibility="gone" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>